--- a/Object Orientation/Implementazione (Consegna-ObjectOrientation-OOBD2122_22.zip)/.classpath
+++ b/Object Orientation/Implementazione (Consegna-ObjectOrientation-OOBD2122_22.zip)/.classpath
@@ -7,8 +7,15 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="postgresql-42.4.0.jar"/>
-	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="KControls-2.0.jar"/>
+	<classpathentry kind="lib" path="jgoodies-common-1.8.1.jar"/>
+	<classpathentry kind="lib" path="jgoodies-common-1.8.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="jgoodies-common-1.8.1-sources.jar"/>
+	<classpathentry kind="lib" path="jgoodies-common-1.8.1-tests.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0-tests.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
